--- a/blog.css
+++ b/blog.css
@@ -21,4 +21,18 @@ figure.capa img {
 width: 100%;
 beight: 100%;
 }
-figure.capa 
+figure.capa figcaption {
+opacity: 0;
+position: absolute;
+top: 0px;
+background-color: rgba(0, 0, 0, 4);
+color: white;
+width: 100%;
+height: 100%;
+padding: 10px;
+box-sizing: border-box;
+transition: opacity 1s;
+}
+figure.capa:hover figcaption {
+    opacity: 1;
+}
