--- a/blog.css
+++ b/blog.css
@@ -25,7 +25,7 @@ figure.capa figcaption {
 opacity: 0;
 position: absolute;
 top: 0px;
-background-color: rgba(0, 0, 0, 4);
+background-color: rgba(0, 0, 0, .6);
 color: white;
 width: 100%;
 height: 100%;
