--- a/estilo.css
+++ b/estilo.css
@@ -9,3 +9,16 @@ p {
     text-align: justify;
     text-indent: 50px;
 }
+
+nav#menu-1 {
+    display: block;
+}
+
+nav#menu ul {
+    list-style: none;
+    text-transform: uppercase;
+    position: absolute;
+    top: -20px;
+    left: 300px;
+}
+
