--- a/blog.css
+++ b/blog.css
@@ -33,6 +33,45 @@ padding: 10px;
 box-sizing: border-box;
 transition: opacity 1s;
 }
+
 figure.capa:hover figcaption {
     opacity: 1;
+}
+
+nav#menu-1 {
+    display: block;
+}
+
+nav#menu-1 ul {
+    list-style: none;
+    text-transform: uppercase;
+    position: absolute;
+    top: -20px;
+    left: 300px;
+}
+
+nav#menu-1 li {
+    display: inline-block;
+    background-color: #dddddddd;
+    padding: 10px;
+    margin: 2px;
+    transition: background-color 1s;
+}
+
+nav#menu-1 li:hover {
+    background-color: #606060;
+}
+
+nav#menu-1 h1 {
+    display: none;
+}
+
+nav#menu-1 a {
+    color: #606060;
+    text-decoration: none;
+}
+
+nav#menu-1 a:hover {
+    color: #dddddddd;
+    text-decoration: underline;
 }
